--- a/deno.json
+++ b/deno.json
@@ -9,15 +9,10 @@
   },
   "lint": {
     "rules": {
-      "tags": [
-        "fresh",
-        "recommended"
-      ]
+      "tags": ["fresh", "recommended"]
     }
   },
-  "exclude": [
-    "**/_fresh/*"
-  ],
+  "exclude": ["**/_fresh/*"],
   "imports": {
     "$fresh/": "https://deno.land/x/fresh@1.5.1/",
     "preact": "https://esm.sh/preact@10.18.1",
@@ -27,7 +22,10 @@
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
     "twind": "https://esm.sh/twind@0.16.19",
     "twind/": "https://esm.sh/twind@0.16.19/",
-    "$std/": "https://deno.land/std@0.193.0/"
+    "$std/": "https://deno.land/std@0.193.0/",
+    "immer": "https://esm.sh/immer@10.0.2",
+    "zustand": "https://esm.sh/zustand@4.4.0?alias=react:preact/compat",
+    "zustand/middleware": "https://esm.sh/zustand@4.4.0/middleware?alias=react:preact/compat"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
