--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
     "parcel": "^2.10.0",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   }
 }
