--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
   "dependencies": {
     "evt": "^2.5.3",
     "immer": "^10.0.3",
+    "lodash-es": "^4.17.21",
     "node-datachannel": "^0.5.0",
     "ws": "^8.14.2",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.10",
     "@types/node": "^20.8.7",
     "@types/ws": "^8.5.8",
     "concurrently": "^8.2.2",
