--- a/package.json
+++ b/package.json
@@ -37,12 +37,16 @@
     "immer": "^10.0.3",
     "lodash-es": "^4.17.21",
     "node-datachannel": "^0.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ws": "^8.14.2",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.10",
     "@types/node": "^20.8.7",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
     "@types/ws": "^8.5.8",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
