--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "nodemon": "^3.0.1",
     "parcel": "^2.10.0",
     "prettier": "^3.0.3",
+    "process": "^0.11.10",
     "typescript": "^5.2.2"
   },
   "prettier": {}
